# brass_gazebo_battery

./: CMakeLists.txt  README.md  package.xml
src/: ROS_debugging.h  battery_consumer.cpp  battery_discharge.cpp
